static/css/timetable/partials/course_modal.scss
// Course Modal Styles
.course-modal {
  height: 85%;
  max-height: 900px;
  max-width: 1200px;

  > div {
    // using important to override boron default style
    // can't declare in javascript either, cuz need hover
    background-color: rgba(0,0,0,.8) !important;
    height: 100%;
    outline: none;
    transition: background-color .2s;
    width: 100%;
  }

  + div {
    // using important to override boron default style
    // can't declare in javascript either, cuz need hover
    background-color: rgba(0,0,0,.8) !important;
    transition: background-color .2s;
  }

  &.trans + div,
  &.trans > div {
    // using important to override boron default style
    // can't declare in javascript either, cuz need hover
    background-color: transparent !important;
  }
}

.course-modal.trans .modal-content,
.course-modal.trans .modal-header,
.course-modal.trans .modal-header div,
.course-modal.trans .modal-header h1,
.course-modal.trans .modal-header h2,
.course-modal.trans .modal-body p,
.course-modal.trans .modal-body p a,
.course-modal.trans .modal-body .credits h4,
.course-modal.trans .modal-body .rating-module h4,
.course-modal.trans .modal-body .modal-module {
  background-color: transparent;
  border-color: transparent;
  color: transparent;
}

.course-modal.trans .modal-close,
.course-modal.trans .modal-share,
.course-modal.trans .modal-save,
.course-modal.trans .modal-add,
.course-modal.trans .modal-body .rating-module,
.course-modal.trans .modal-body .modal-module,
.course-modal.trans .modal-body .modal-module-header,
.trans .reactions-wrapper {
  opacity: 0;
  visibility: hidden;
}

.trans .capacity {
  opacity: 0;
  visibility: hidden;
}

.course-modal .master-slot .slot-bar {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.subtitle {
  display: flex;
  align-items: center;
  margin: 6px;
  >.areas {
    display: flex;
    > div {
      border-radius: 25%;
    }
  }
}

.bubble {
  color: white;
  text-align: center;
  font-size: 16px;
  margin-left: 5px;
  padding: 2px 4px;
  &.H {
    background: rgba(255, 118, 118, 0.7);
  }

  &.S {
    background: rgba(64, 142, 169, 0.7);
  }

  &.N {
    background: rgba(177, 119, 199, 0.7);
  }

  &.E {
    background: rgba(37, 155, 130, 0.7);
  }

  &.Q {
    background: rgba(255, 212, 98, 0.7);
  }
  &.writing {
    background: rgba(55, 89, 148, 0.7);
    border-radius: 7px;
  }
}

.course-modal .img-icon {
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

.course-modal .modal-content .loader {
  height: 90px;
  width: 90px;
}

.friend {
  float: left;
  height: 30px;
  margin-bottom: 3px;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.course-modal .ms-friend {
  float: left;
  height: 30px;
  margin-left: 0;
  margin-right: 4.5px;
  padding: 0;
  width: 30px;
}

// Course Modal Content Styles
.modal-content {
  background-color: $gfff;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  display: flex;
  flex-direction: column;
  height: 100%;
  transition: background-color .2s, color .2s;
  width: 100%;
}

.modal-header {
  background-color: $gf3f3f3;
  border-bottom: 1px solid $gddd;
  padding: 20px 10px 10px;
  position: relative;
  transition: background-color .2s, color .2s;
  z-index: 11;

  h1 {
    color: $primary-navy;
    font-size: 36px;
    margin: 0;
    padding-right: 85px;
    transition: color .2s;
  }

  h2 {
    color: $g777;
    font-family: $font-body;
    font-size: 16px;
    font-weight: 400;
    margin: 10px 0;
    padding-right: 15%;
    transition: color .2s;
  }
}


// Course Modal Corner Actions
.modal-close,
.modal-share,
.modal-save {
  color: $g777;
  cursor: pointer;
  height: 20px;
  opacity: 1;
  position: absolute;
  top: 5px;
  transition: color .2s, transform .3s, opacity .2s, visibility .2s;
  visibility: visible;
  width: 20px;

  i {
    font-size: 20px;
    line-height: 20px;
  }
}

.modal-close {
  right: 5px;

  &:hover {
    color: #C0392B;
    transform: scale(1.2);
  }
}

.modal-share {
  right: 30px;

  &:hover {
    color: #5B99CE;
    transform: scale(1.2);
  }
}

.modal-header {
  .share-course-link-wrapper {
    top: 27px;
    right: 22px;
  }

  .share-course-link {
    font-size: 14px;
    height: 25px;
    margin-top: 4px;
  }
}

.modal-save {
  right: 55px;

  &:hover {
    color: #5BCE84;
    transform: scale(1.2);
  }
}

// Course Modal Add
.modal-add {
  background-color: $primary-navy;
  border-radius: 100%;
  bottom: -34px;
  cursor: pointer;
  height: 60px;
  opacity: 1;
  position: absolute;
  right: 10%;
  transition: background-color .2s, opacity .2s, visibility .2s;
  visibility: visible;
  width: 60px;
  z-index: 1;

  i {
    color: $gfff;
    font-size: 24px;
    line-height: 60px;
    text-align: center;
    width: 100%;
  }

  &:hover {
    background-color: #1858BB;
  }

  &.in-roster {
    &:hover {
      animation: pulsate .8s ease-out infinite;
      background-color: #C0392B;
    }
  }

  &.on-active-timetable {
    background-color: #2DD6B5;

    &:hover {
      background-color: #56ECCF;
    }
  }
}

@keyframes pulsate {
  0% {
    opacity: 1;
    transform: scale(1);
  }

  50% {
    opacity: 1;
    transform: scale(1.5);
  }

  100% {
    opacity: 1;
    transform: scale(1);
  }
}
/* ... */

